# Examples

function (add_example TGT)
    add_executable(${TGT} "${TGT}.cpp")
    target_set_output_dirs(${TGT})
    target_link_libraries(${TGT} PRIVATE project_options clu::clu)
    target_compile_options(${TGT} PRIVATE cxx_std_20)
endfunction ()

add_example(all_headers)
add_example(buffer)
add_example(coroutine)
add_example(enumerate)
add_example(function_ref)
add_example(generator)
add_example(indices)
add_example(meta)
add_example(outcome)
add_example(scope)
add_example(string_utils)
add_example(type_erasure)
