# Examples

function (add_example TGT)
    add_executable(${TGT} "${TGT}.cpp")
    set_target_properties(${TGT} PROPERTIES FOLDER examples)
    target_set_output_dirs(${TGT})
    target_link_libraries(${TGT} PRIVATE project_options clu::clu)
    target_set_cxx_std(${TGT})
endfunction ()

add_example(all_headers)
add_example(box)
add_example(buffer)
add_example(coroutine)
add_example(enumerate)
add_example(function_ref)
add_example(generator)
add_example(indices)
add_example(module)
add_example(random)
add_example(scope)
add_example(string_utils)
